Fix JDK 8 build: use Collections.singletonList in NativeImageAdapter test
List.of() is a Java 9 API; vm/tests compiles with source/target 1.8.
Swap for Collections.singletonList to unblock CI.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>